everything-presence-zone-configurator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: everything-presence-zone-configurator
  name: everything-presence-zone-configurator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: everything-presence-zone-configurator
  template:
    metadata:
      labels:
        app: everything-presence-zone-configurator
    spec:
      automountServiceAccountToken: false
      containers:
        - image: everythingsmarthome/everything-presence-mmwave-configurator:latest
          name: configurator
---
