everything-presence-zone-configurator/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: everything-presence-zone-configurator
spec:
  selector:
    app: everything-presence-zone-configurator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8099
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: supervisor
  namespace: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8123
      name: http
